[package]
name = "tesseract-plumbing"
version = "0.5.1"
authors = ["Chris Couzens <ccouzens@gmail.com>"]
edition = "2018"
description = "Safe wrapper of `tesseract-sys`"
homepage = "https://github.com/ccouzens/tesseract-plumbing"
repository = "https://github.com/ccouzens/tesseract-plumbing"
readme = "README.md"
keywords = ["leptonica", "tesseract", "ocr", "image"]
license = "MIT"
[dependencies]

tesseract-sys = { git = "https://github.com/ntoskrnl7/tesseract-sys" }
leptonica-plumbing = { git = "https://github.com/ntoskrnl7/leptonica-plumbing", branch = "main" }
thiserror = "1.0"

[dev-dependencies]
image = "0.23.14"
